--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -14,6 +14,7 @@ jobs:
       CNAME: srfp-expediente.odia.legal
       COMMIT_AUTHOR: ODIA <odia@odia.legal>
       READ_IMAGES: true
+      URL: https://srfp-expediente.odia.legal/
     steps:
       - name: Checkout main repo
         uses: actions/checkout@v2
@@ -30,7 +31,7 @@ jobs:
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag juscaba
       - name: Run the container
-        run: docker run -v $(pwd):/tmp/juscaba juscaba ./run.sh $EXPEDIENTES
+        run: docker run -v $(pwd):/tmp/juscaba --env "URL=${URL}" juscaba ./run.sh $EXPEDIENTES
       - name: Create expedientes.json
         run: echo "${EXPEDIENTES_JSON}" > build/data/expedientes.json
       - name: Create CNAME
